@@ -1,4 +1,5 @@
 1.x.x
+	* RFC5702: enabled sha2 functions by default.
 
 1.6.2	2009-10-01
 	* Fix Makefile patch from Havard Eidnes, better install.sh usage.
